--- a/MVCDemo/packages.config
+++ b/MVCDemo/packages.config
@@ -20,4 +20,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
 </packages>
