--- a/MVCDemo/Web.config
+++ b/MVCDemo/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AccountContext" connectionString="Data Source=.;database=MvcDemo;uid=sa;pwd=1;AttachDBFilename=|DataDirectory|\MvcDemo.mdf;" providerName="System.Data.SqlClient"/>
+    <add name="AccountContext" connectionString="Data Source=.;database=MvcDemo2;uid=sa;pwd=1;AttachDBFilename=|DataDirectory|\MvcDemo2.mdf;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -44,11 +44,12 @@
     </handlers>
   </system.webServer>
   <entityFramework>
-    <contexts>
+    <!--这里如果开启，就是会在运行时，如果Model改变，则自动把原数据库删除，新增数据库-->
+    <!--<contexts>
       <context type="MVCDemo.DAL.AccountContext,MVCDemo" disableDatabaseInitialization="false">
         <databaseInitializer type="MVCDemo.DAL.AccountInitializer,MVCDemo"></databaseInitializer>
       </context>
-    </contexts>
+    </contexts>-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
